<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btn_bt_get_adapter"
        android:text="@string/btn_bt_get_adapter"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <Button
        android:enabled="false"
        android:id="@+id/btn_bt_enable"
        android:text="@string/btn_bt_enable"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <Button
        android:enabled="false"
        android:id="@+id/btn_start_device_discovery"
        android:text="@string/btn_start_device_discovery"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <Button
        android:enabled="false"
        android:id="@+id/btn_stop_device_discovery"
        android:text="@string/btn_stop_device_discovery"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <Button
        android:enabled="false"
        android:id="@+id/btn_turn_visible"
        android:text="@string/btn_turn_visible"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />
</LinearLayout>
